<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="misiont.mision7.MainActivity"
    >
    <include
        layout="@layout/app_toolbar" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
    <TextView
        android:id="@+id/textViewBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido_a_parking_control"
        android:textAppearance="@style/AppTheme.Title"
        android:layout_centerHorizontal="true"
         />
    <TextView
        android:id="@+id/textViewOrdenInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sesión_para_empezar"
        android:layout_below="@+id/textViewBienvenido"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
         />
    <ImageView
        android:id="@+id/imageViewCar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_directions_car_black_24dp"
        android:layout_below="@id/textViewOrdenInicioSesion"
        android:tint="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/editTextUserName"
        android:hint="@string/nombre_de_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewCar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
         />
    <EditText
        android:id="@+id/editTextUserPassword"
        android:hint="@string/contrase_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUserName"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <CheckBox
        android:id="@+id/checkBoxRecordar"
        android:text="@string/recordarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUserPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/buttonIniciarSesion"
        android:text="@string/iniciar_sesi_n"
        android:textColor="@android:color/white"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="@color/colorAccent"
        android:layout_below="@+id/checkBoxRecordar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    </RelativeLayout>

</LinearLayout>
